bison_output/sintaxi.output
Terminals unused in grammar

    EXTRALINE
    COMMENT
    COMMA
    SEMICOLON


Grammar

    0 $accept: programa $end

    1 programa: expressio_list

    2 expressio_list: expressio ENDLINE
    3               | expressio ENDLINE expressio_list

    4 header: ENDLINE REPEAT OPERATION

    5 if_header: IF OPERATION_BOOLEAN THEN

    6 expressio: header DO ENDLINE expressio_list DONE ENDLINE
    7          | if_header ENDLINE expressio_list FI
    8          | ID ASSIGN OPERATION
    9          | ID ASSIGN OPERATION MODE
   10          | ID ASSIGN OPERATION_BOOLEAN
   11          | ID_BOOL ASSIGN OPERATION_BOOLEAN
   12          | OPERATION MODE
   13          | OPERATION
   14          | OPERATION_BOOLEAN
   15          | ID ASSIGN ID OPENED_CLAUSE OPERATION CLOSED_CLAUSE
   16          | ID OPENED_CLAUSE OPERATION CLOSED_CLAUSE ASSIGN OPERATION

   17 OPERATION: OPERATION PLUS OPERATION2
   18          | OPERATION MINUS OPERATION2
   19          | OPERATION2

   20 OPERATION2: OPERATION2 MULTIPLY OPERATION3
   21           | OPERATION2 DIVIDE OPERATION3
   22           | OPERATION2 MOD OPERATION3
   23           | OPERATION3

   24 OPERATION3: OPERATION4 POWER OPERATION3
   25           | OPERATION4

   26 OPERATION4: SIN OPERATION4
   27           | COS OPERATION4
   28           | TAN OPERATION4
   29           | LEN OPERATION4
   30           | SUBSTR OPEN_PARENTHESIS OPERATION4 OPERATION4 OPERATION4 CLOSED_PARENTHESIS
   31           | INTEGER
   32           | FLOAT
   33           | STRING
   34           | ID
   35           | MINUS ID
   36           | OPEN_PARENTHESIS OPERATION CLOSED_PARENTHESIS

   37 OPERATION_BOOLEAN: OPERATION_BOOLEAN OR OPERATION_BOOLEAN1
   38                  | OPERATION_BOOLEAN1

   39 OPERATION_BOOLEAN1: OPERATION_BOOLEAN2
   40                   | OPERATION_BOOLEAN1 AND OPERATION_BOOLEAN2

   41 OPERATION_BOOLEAN2: OPERATION_BOOLEAN3
   42                   | NOT OPERATION_BOOLEAN2

   43 OPERATION_BOOLEAN3: OPEN_PARENTHESIS OPERATION_BOOLEAN CLOSED_PARENTHESIS
   44                   | TRUE
   45                   | ID_BOOL
   46                   | FALSE
   47                   | OPERATION EQUAL OPERATION
   48                   | OPERATION NOT_EQUAL OPERATION
   49                   | OPERATION GREATER_EQUAL OPERATION
   50                   | OPERATION GREATER_THAN OPERATION
   51                   | OPERATION LESS_THAN OPERATION
   52                   | OPERATION LESS_EQUAL OPERATION


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER <enter> (258) 31
    FALSE <boolean> (259) 46
    TRUE <boolean> (260) 44
    MODE <mode> (261) 9 12
    FLOAT <real> (262) 32
    ID <ident> (263) 8 9 10 15 16 34 35
    ID_BOOL <ident> (264) 11 45
    STRING <cadena> (265) 33
    IF <sense_valor> (266) 5
    THEN <sense_valor> (267) 5
    FI <sense_valor> (268) 7
    EXTRALINE <sense_valor> (269)
    DO <sense_valor> (270) 6
    DONE <sense_valor> (271) 6
    OPENED_CLAUSE <sense_valor> (272) 15 16
    CLOSED_CLAUSE <sense_valor> (273) 15 16
    COMMENT <sense_valor> (274)
    SUBSTR <sense_valor> (275) 30
    COMMA <sense_valor> (276)
    LEN <sense_valor> (277) 29
    SIN <sense_valor> (278) 26
    COS <sense_valor> (279) 27
    TAN <sense_valor> (280) 28
    AND <sense_valor> (281) 40
    OR <sense_valor> (282) 37
    NOT <sense_valor> (283) 42
    PLUS <sense_valor> (284) 17
    MINUS <sense_valor> (285) 18 35
    MULTIPLY <sense_valor> (286) 20
    DIVIDE <sense_valor> (287) 21
    MOD <sense_valor> (288) 22
    POWER <sense_valor> (289) 24
    CLOSED_PARENTHESIS <sense_valor> (290) 30 36 43
    OPEN_PARENTHESIS <sense_valor> (291) 30 36 43
    ASSIGN <sense_valor> (292) 8 9 10 11 15 16
    ENDLINE <sense_valor> (293) 2 3 4 6 7
    SEMICOLON <sense_valor> (294)
    GREATER_THAN <sense_valor> (295) 50
    GREATER_EQUAL <sense_valor> (296) 49
    LESS_THAN <sense_valor> (297) 51
    LESS_EQUAL <sense_valor> (298) 52
    EQUAL <sense_valor> (299) 47
    NOT_EQUAL <sense_valor> (300) 48
    REPEAT <header> (301) 4


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    programa <sense_valor> (48)
        on left: 1
        on right: 0
    expressio_list <expr_list> (49)
        on left: 2 3
        on right: 1 3 6 7
    header <header> (50)
        on left: 4
        on right: 6
    if_header <header> (51)
        on left: 5
        on right: 7
    expressio <expr_val> (52)
        on left: 6 7 8 9 10 11 12 13 14 15 16
        on right: 2 3
    OPERATION <expr_val> (53)
        on left: 17 18 19
        on right: 4 8 9 12 13 15 16 17 18 36 47 48 49 50 51 52
    OPERATION2 <expr_val> (54)
        on left: 20 21 22 23
        on right: 17 18 19 20 21 22
    OPERATION3 <expr_val> (55)
        on left: 24 25
        on right: 20 21 22 23 24
    OPERATION4 <expr_val> (56)
        on left: 26 27 28 29 30 31 32 33 34 35 36
        on right: 24 25 26 27 28 29 30
    OPERATION_BOOLEAN <expr_val> (57)
        on left: 37 38
        on right: 5 10 11 14 37 43
    OPERATION_BOOLEAN1 <expr_val> (58)
        on left: 39 40
        on right: 37 38 40
    OPERATION_BOOLEAN2 <expr_val> (59)
        on left: 41 42
        on right: 39 40 42
    OPERATION_BOOLEAN3 <expr_val> (60)
        on left: 43 44 45 46 47 48 49 50 51 52
        on right: 41


State 0

    0 $accept: • programa $end

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 5
    ID_BOOL           shift, and go to state 6
    STRING            shift, and go to state 7
    IF                shift, and go to state 8
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    NOT               shift, and go to state 14
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 16
    ENDLINE           shift, and go to state 17

    programa            go to state 18
    expressio_list      go to state 19
    header              go to state 20
    if_header           go to state 21
    expressio           go to state 22
    OPERATION           go to state 23
    OPERATION2          go to state 24
    OPERATION3          go to state 25
    OPERATION4          go to state 26
    OPERATION_BOOLEAN   go to state 27
    OPERATION_BOOLEAN1  go to state 28
    OPERATION_BOOLEAN2  go to state 29
    OPERATION_BOOLEAN3  go to state 30


State 1

   31 OPERATION4: INTEGER •

    $default  reduce using rule 31 (OPERATION4)


State 2

   46 OPERATION_BOOLEAN3: FALSE •

    $default  reduce using rule 46 (OPERATION_BOOLEAN3)


State 3

   44 OPERATION_BOOLEAN3: TRUE •

    $default  reduce using rule 44 (OPERATION_BOOLEAN3)


State 4

   32 OPERATION4: FLOAT •

    $default  reduce using rule 32 (OPERATION4)


State 5

    8 expressio: ID • ASSIGN OPERATION
    9          | ID • ASSIGN OPERATION MODE
   10          | ID • ASSIGN OPERATION_BOOLEAN
   15          | ID • ASSIGN ID OPENED_CLAUSE OPERATION CLOSED_CLAUSE
   16          | ID • OPENED_CLAUSE OPERATION CLOSED_CLAUSE ASSIGN OPERATION
   34 OPERATION4: ID •

    OPENED_CLAUSE  shift, and go to state 31
    ASSIGN         shift, and go to state 32

    $default  reduce using rule 34 (OPERATION4)


State 6

   11 expressio: ID_BOOL • ASSIGN OPERATION_BOOLEAN
   45 OPERATION_BOOLEAN3: ID_BOOL •

    ASSIGN  shift, and go to state 33

    $default  reduce using rule 45 (OPERATION_BOOLEAN3)


State 7

   33 OPERATION4: STRING •

    $default  reduce using rule 33 (OPERATION4)


State 8

    5 if_header: IF • OPERATION_BOOLEAN THEN

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    ID_BOOL           shift, and go to state 35
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    NOT               shift, and go to state 14
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 16

    OPERATION           go to state 36
    OPERATION2          go to state 24
    OPERATION3          go to state 25
    OPERATION4          go to state 26
    OPERATION_BOOLEAN   go to state 37
    OPERATION_BOOLEAN1  go to state 28
    OPERATION_BOOLEAN2  go to state 29
    OPERATION_BOOLEAN3  go to state 30


State 9

   30 OPERATION4: SUBSTR • OPEN_PARENTHESIS OPERATION4 OPERATION4 OPERATION4 CLOSED_PARENTHESIS

    OPEN_PARENTHESIS  shift, and go to state 38


State 10

   29 OPERATION4: LEN • OPERATION4

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 39

    OPERATION4  go to state 40


State 11

   26 OPERATION4: SIN • OPERATION4

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 39

    OPERATION4  go to state 41


State 12

   27 OPERATION4: COS • OPERATION4

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 39

    OPERATION4  go to state 42


State 13

   28 OPERATION4: TAN • OPERATION4

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 39

    OPERATION4  go to state 43


State 14

   42 OPERATION_BOOLEAN2: NOT • OPERATION_BOOLEAN2

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    ID_BOOL           shift, and go to state 35
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    NOT               shift, and go to state 14
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 16

    OPERATION           go to state 36
    OPERATION2          go to state 24
    OPERATION3          go to state 25
    OPERATION4          go to state 26
    OPERATION_BOOLEAN2  go to state 44
    OPERATION_BOOLEAN3  go to state 30


State 15

   35 OPERATION4: MINUS • ID

    ID  shift, and go to state 45


State 16

   36 OPERATION4: OPEN_PARENTHESIS • OPERATION CLOSED_PARENTHESIS
   43 OPERATION_BOOLEAN3: OPEN_PARENTHESIS • OPERATION_BOOLEAN CLOSED_PARENTHESIS

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    ID_BOOL           shift, and go to state 35
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    NOT               shift, and go to state 14
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 16

    OPERATION           go to state 46
    OPERATION2          go to state 24
    OPERATION3          go to state 25
    OPERATION4          go to state 26
    OPERATION_BOOLEAN   go to state 47
    OPERATION_BOOLEAN1  go to state 28
    OPERATION_BOOLEAN2  go to state 29
    OPERATION_BOOLEAN3  go to state 30


State 17

    4 header: ENDLINE • REPEAT OPERATION

    REPEAT  shift, and go to state 48


State 18

    0 $accept: programa • $end

    $end  shift, and go to state 49


State 19

    1 programa: expressio_list •

    $default  reduce using rule 1 (programa)


State 20

    6 expressio: header • DO ENDLINE expressio_list DONE ENDLINE

    DO  shift, and go to state 50


State 21

    7 expressio: if_header • ENDLINE expressio_list FI

    ENDLINE  shift, and go to state 51


State 22

    2 expressio_list: expressio • ENDLINE
    3               | expressio • ENDLINE expressio_list

    ENDLINE  shift, and go to state 52


State 23

   12 expressio: OPERATION • MODE
   13          | OPERATION •
   17 OPERATION: OPERATION • PLUS OPERATION2
   18          | OPERATION • MINUS OPERATION2
   47 OPERATION_BOOLEAN3: OPERATION • EQUAL OPERATION
   48                   | OPERATION • NOT_EQUAL OPERATION
   49                   | OPERATION • GREATER_EQUAL OPERATION
   50                   | OPERATION • GREATER_THAN OPERATION
   51                   | OPERATION • LESS_THAN OPERATION
   52                   | OPERATION • LESS_EQUAL OPERATION

    MODE           shift, and go to state 53
    PLUS           shift, and go to state 54
    MINUS          shift, and go to state 55
    GREATER_THAN   shift, and go to state 56
    GREATER_EQUAL  shift, and go to state 57
    LESS_THAN      shift, and go to state 58
    LESS_EQUAL     shift, and go to state 59
    EQUAL          shift, and go to state 60
    NOT_EQUAL      shift, and go to state 61

    $default  reduce using rule 13 (expressio)


State 24

   19 OPERATION: OPERATION2 •
   20 OPERATION2: OPERATION2 • MULTIPLY OPERATION3
   21           | OPERATION2 • DIVIDE OPERATION3
   22           | OPERATION2 • MOD OPERATION3

    MULTIPLY  shift, and go to state 62
    DIVIDE    shift, and go to state 63
    MOD       shift, and go to state 64

    $default  reduce using rule 19 (OPERATION)


State 25

   23 OPERATION2: OPERATION3 •

    $default  reduce using rule 23 (OPERATION2)


State 26

   24 OPERATION3: OPERATION4 • POWER OPERATION3
   25           | OPERATION4 •

    POWER  shift, and go to state 65

    $default  reduce using rule 25 (OPERATION3)


State 27

   14 expressio: OPERATION_BOOLEAN •
   37 OPERATION_BOOLEAN: OPERATION_BOOLEAN • OR OPERATION_BOOLEAN1

    OR  shift, and go to state 66

    $default  reduce using rule 14 (expressio)


State 28

   38 OPERATION_BOOLEAN: OPERATION_BOOLEAN1 •
   40 OPERATION_BOOLEAN1: OPERATION_BOOLEAN1 • AND OPERATION_BOOLEAN2

    AND  shift, and go to state 67

    $default  reduce using rule 38 (OPERATION_BOOLEAN)


State 29

   39 OPERATION_BOOLEAN1: OPERATION_BOOLEAN2 •

    $default  reduce using rule 39 (OPERATION_BOOLEAN1)


State 30

   41 OPERATION_BOOLEAN2: OPERATION_BOOLEAN3 •

    $default  reduce using rule 41 (OPERATION_BOOLEAN2)


State 31

   16 expressio: ID OPENED_CLAUSE • OPERATION CLOSED_CLAUSE ASSIGN OPERATION

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 39

    OPERATION   go to state 68
    OPERATION2  go to state 24
    OPERATION3  go to state 25
    OPERATION4  go to state 26


State 32

    8 expressio: ID ASSIGN • OPERATION
    9          | ID ASSIGN • OPERATION MODE
   10          | ID ASSIGN • OPERATION_BOOLEAN
   15          | ID ASSIGN • ID OPENED_CLAUSE OPERATION CLOSED_CLAUSE

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 69
    ID_BOOL           shift, and go to state 35
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    NOT               shift, and go to state 14
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 16

    OPERATION           go to state 70
    OPERATION2          go to state 24
    OPERATION3          go to state 25
    OPERATION4          go to state 26
    OPERATION_BOOLEAN   go to state 71
    OPERATION_BOOLEAN1  go to state 28
    OPERATION_BOOLEAN2  go to state 29
    OPERATION_BOOLEAN3  go to state 30


State 33

   11 expressio: ID_BOOL ASSIGN • OPERATION_BOOLEAN

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    ID_BOOL           shift, and go to state 35
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    NOT               shift, and go to state 14
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 16

    OPERATION           go to state 36
    OPERATION2          go to state 24
    OPERATION3          go to state 25
    OPERATION4          go to state 26
    OPERATION_BOOLEAN   go to state 72
    OPERATION_BOOLEAN1  go to state 28
    OPERATION_BOOLEAN2  go to state 29
    OPERATION_BOOLEAN3  go to state 30


State 34

   34 OPERATION4: ID •

    $default  reduce using rule 34 (OPERATION4)


State 35

   45 OPERATION_BOOLEAN3: ID_BOOL •

    $default  reduce using rule 45 (OPERATION_BOOLEAN3)


State 36

   17 OPERATION: OPERATION • PLUS OPERATION2
   18          | OPERATION • MINUS OPERATION2
   47 OPERATION_BOOLEAN3: OPERATION • EQUAL OPERATION
   48                   | OPERATION • NOT_EQUAL OPERATION
   49                   | OPERATION • GREATER_EQUAL OPERATION
   50                   | OPERATION • GREATER_THAN OPERATION
   51                   | OPERATION • LESS_THAN OPERATION
   52                   | OPERATION • LESS_EQUAL OPERATION

    PLUS           shift, and go to state 54
    MINUS          shift, and go to state 55
    GREATER_THAN   shift, and go to state 56
    GREATER_EQUAL  shift, and go to state 57
    LESS_THAN      shift, and go to state 58
    LESS_EQUAL     shift, and go to state 59
    EQUAL          shift, and go to state 60
    NOT_EQUAL      shift, and go to state 61


State 37

    5 if_header: IF OPERATION_BOOLEAN • THEN
   37 OPERATION_BOOLEAN: OPERATION_BOOLEAN • OR OPERATION_BOOLEAN1

    THEN  shift, and go to state 73
    OR    shift, and go to state 66


State 38

   30 OPERATION4: SUBSTR OPEN_PARENTHESIS • OPERATION4 OPERATION4 OPERATION4 CLOSED_PARENTHESIS

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 39

    OPERATION4  go to state 74


State 39

   36 OPERATION4: OPEN_PARENTHESIS • OPERATION CLOSED_PARENTHESIS

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 39

    OPERATION   go to state 75
    OPERATION2  go to state 24
    OPERATION3  go to state 25
    OPERATION4  go to state 26


State 40

   29 OPERATION4: LEN OPERATION4 •

    $default  reduce using rule 29 (OPERATION4)


State 41

   26 OPERATION4: SIN OPERATION4 •

    $default  reduce using rule 26 (OPERATION4)


State 42

   27 OPERATION4: COS OPERATION4 •

    $default  reduce using rule 27 (OPERATION4)


State 43

   28 OPERATION4: TAN OPERATION4 •

    $default  reduce using rule 28 (OPERATION4)


State 44

   42 OPERATION_BOOLEAN2: NOT OPERATION_BOOLEAN2 •

    $default  reduce using rule 42 (OPERATION_BOOLEAN2)


State 45

   35 OPERATION4: MINUS ID •

    $default  reduce using rule 35 (OPERATION4)


State 46

   17 OPERATION: OPERATION • PLUS OPERATION2
   18          | OPERATION • MINUS OPERATION2
   36 OPERATION4: OPEN_PARENTHESIS OPERATION • CLOSED_PARENTHESIS
   47 OPERATION_BOOLEAN3: OPERATION • EQUAL OPERATION
   48                   | OPERATION • NOT_EQUAL OPERATION
   49                   | OPERATION • GREATER_EQUAL OPERATION
   50                   | OPERATION • GREATER_THAN OPERATION
   51                   | OPERATION • LESS_THAN OPERATION
   52                   | OPERATION • LESS_EQUAL OPERATION

    PLUS                shift, and go to state 54
    MINUS               shift, and go to state 55
    CLOSED_PARENTHESIS  shift, and go to state 76
    GREATER_THAN        shift, and go to state 56
    GREATER_EQUAL       shift, and go to state 57
    LESS_THAN           shift, and go to state 58
    LESS_EQUAL          shift, and go to state 59
    EQUAL               shift, and go to state 60
    NOT_EQUAL           shift, and go to state 61


State 47

   37 OPERATION_BOOLEAN: OPERATION_BOOLEAN • OR OPERATION_BOOLEAN1
   43 OPERATION_BOOLEAN3: OPEN_PARENTHESIS OPERATION_BOOLEAN • CLOSED_PARENTHESIS

    OR                  shift, and go to state 66
    CLOSED_PARENTHESIS  shift, and go to state 77


State 48

    4 header: ENDLINE REPEAT • OPERATION

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 39

    OPERATION   go to state 78
    OPERATION2  go to state 24
    OPERATION3  go to state 25
    OPERATION4  go to state 26


State 49

    0 $accept: programa $end •

    $default  accept


State 50

    6 expressio: header DO • ENDLINE expressio_list DONE ENDLINE

    ENDLINE  shift, and go to state 79


State 51

    7 expressio: if_header ENDLINE • expressio_list FI

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 5
    ID_BOOL           shift, and go to state 6
    STRING            shift, and go to state 7
    IF                shift, and go to state 8
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    NOT               shift, and go to state 14
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 16
    ENDLINE           shift, and go to state 17

    expressio_list      go to state 80
    header              go to state 20
    if_header           go to state 21
    expressio           go to state 22
    OPERATION           go to state 23
    OPERATION2          go to state 24
    OPERATION3          go to state 25
    OPERATION4          go to state 26
    OPERATION_BOOLEAN   go to state 27
    OPERATION_BOOLEAN1  go to state 28
    OPERATION_BOOLEAN2  go to state 29
    OPERATION_BOOLEAN3  go to state 30


State 52

    2 expressio_list: expressio ENDLINE •
    3               | expressio ENDLINE • expressio_list

    INTEGER           shift, and go to state 1
    FALSE             shift, and go to state 2
    TRUE              shift, and go to state 3
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 5
    ID_BOOL           shift, and go to state 6
    STRING            shift, and go to state 7
    IF                shift, and go to state 8
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    NOT               shift, and go to state 14
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 16
    ENDLINE           shift, and go to state 17

    $default  reduce using rule 2 (expressio_list)

    expressio_list      go to state 81
    header              go to state 20
    if_header           go to state 21
    expressio           go to state 22
    OPERATION           go to state 23
    OPERATION2          go to state 24
    OPERATION3          go to state 25
    OPERATION4          go to state 26
    OPERATION_BOOLEAN   go to state 27
    OPERATION_BOOLEAN1  go to state 28
    OPERATION_BOOLEAN2  go to state 29
    OPERATION_BOOLEAN3  go to state 30


State 53

   12 expressio: OPERATION MODE •

    $default  reduce using rule 12 (expressio)


State 54

   17 OPERATION: OPERATION PLUS • OPERATION2

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 39

    OPERATION2  go to state 82
    OPERATION3  go to state 25
    OPERATION4  go to state 26


State 55

   18 OPERATION: OPERATION MINUS • OPERATION2

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 39

    OPERATION2  go to state 83
    OPERATION3  go to state 25
    OPERATION4  go to state 26


State 56

   50 OPERATION_BOOLEAN3: OPERATION GREATER_THAN • OPERATION

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 39

    OPERATION   go to state 84
    OPERATION2  go to state 24
    OPERATION3  go to state 25
    OPERATION4  go to state 26


State 57

   49 OPERATION_BOOLEAN3: OPERATION GREATER_EQUAL • OPERATION

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 39

    OPERATION   go to state 85
    OPERATION2  go to state 24
    OPERATION3  go to state 25
    OPERATION4  go to state 26


State 58

   51 OPERATION_BOOLEAN3: OPERATION LESS_THAN • OPERATION

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 39

    OPERATION   go to state 86
    OPERATION2  go to state 24
    OPERATION3  go to state 25
    OPERATION4  go to state 26


State 59

   52 OPERATION_BOOLEAN3: OPERATION LESS_EQUAL • OPERATION

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 39

    OPERATION   go to state 87
    OPERATION2  go to state 24
    OPERATION3  go to state 25
    OPERATION4  go to state 26


State 60

   47 OPERATION_BOOLEAN3: OPERATION EQUAL • OPERATION

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 39

    OPERATION   go to state 88
    OPERATION2  go to state 24
    OPERATION3  go to state 25
    OPERATION4  go to state 26


State 61

   48 OPERATION_BOOLEAN3: OPERATION NOT_EQUAL • OPERATION

    INTEGER           shift, and go to state 1
    FLOAT             shift, and go to state 4
    ID                shift, and go to state 34
    STRING            shift, and go to state 7
    SUBSTR            shift, and go to state 9
    LEN               shift, and go to state 10
    SIN               shift, and go to state 11
    COS               shift, and go to state 12
    TAN               shift, and go to state 13
    MINUS             shift, and go to state 15
    OPEN_PARENTHESIS  shift, and go to state 39

    OPERATION   go to state 89
    OPERATION2  go to state 24
    OPERATION3  go to state 25
    OPERATION4  go to state 26


State 62

   20 OPERATION2: OPERATION2 MULTIPLY • OPERATION3
